--- a/www/index.html
+++ b/www/index.html
@@ -29,6 +29,7 @@
   <!-- BIM360 packages: login and authentication -->
   <script src="/js/oauth.js"></script>
   <script src="/js/forge.viewer.js"></script>
+  <script src="/js/gallery.js"></script>
 
 </head>
 <body class="vsc-initialized">
@@ -63,9 +64,9 @@
 
   <div class="tz-gallery">
 
-    <div class="row">
+    <div class="row categories_list">
 
-      <div class="col-sm-6 col-md-4">
+     <!--  <div class="col-sm-6 col-md-4">
         <div class="thumbnail">
             <img src="./img/engine.png" alt="Engine">
           <div class="caption">
@@ -118,7 +119,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
 
   </div>
